# RLM

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  rlm_result.py  rlm_result.txt
core/: __init__.py  api.py  document.py  llm.py  optimized_rlm.py  parser.py  prompts.py  repl.py  rlm_system.py
logs/: optimized_lookup.jsonl  optimized_run.jsonl  real_optimized.jsonl
tests/: test_rlm.py
